<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue_gradient"
    tools:context="kin.devplatform.sample.MainActivity"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@drawable/kinecosystem_kin_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/sample_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/kin_sdk_sample_app"
        android:textColor="@color/kinecosystem_white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"/>


    <TextView
        android:id="@+id/public_text_area"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="@dimen/kinecosystem_main_margin"
        android:layout_marginLeft="@dimen/kinecosystem_margin_large"
        android:layout_marginRight="@dimen/kinecosystem_margin_large"
        android:paddingLeft="@dimen/kinecosystem_main_margin"
        android:paddingRight="@dimen/kinecosystem_main_margin"
        android:background="@drawable/stroke_frame_rounded_white"
        android:ellipsize="marquee"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:textColor="@color/kinecosystem_white"
        app:layout_constraintBottom_toTopOf="@+id/show_public_address"
        tools:text="GASDAGDFGHSDSDGDSFGKJ#$%IHSal;skdl;aksdl;askd;lksdDHASDKGSFDGJHALKHSD"/>


    <Button
        android:id="@+id/show_public_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/kinecosystem_margin_large"
        android:layout_marginRight="@dimen/kinecosystem_margin_large"
        android:layout_gravity="bottom"
        android:background="@drawable/button_bg_blue_rounded"
        android:text="@string/show_public_address"
        android:textAllCaps="false"
        android:textColor="@color/kinecosystem_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/get_balance"
        />

    <Button
        android:id="@+id/get_balance"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="@dimen/kinecosystem_margin_large"
        android:layout_marginEnd="@dimen/kinecosystem_margin_large"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/kinecosystem_main_margin"
        android:background="@drawable/button_bg_white_rounded"
        android:clickable="true"
        android:text="@string/get_balance"
        android:textAllCaps="false"
        android:textColor="@color/kinecosystem_bluePrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/launch_marketplace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/launch_marketplace"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="@dimen/kinecosystem_margin_large"
        android:layout_marginEnd="@dimen/kinecosystem_margin_large"
        android:layout_gravity="bottom"
        android:background="@drawable/button_bg_blue_rounded"
        android:text="@string/kin_marketplace_title"
        android:textAllCaps="false"
        android:textColor="@color/kinecosystem_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/native_spend_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/native_spend_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="@dimen/kinecosystem_margin_large"
        android:layout_marginEnd="@dimen/kinecosystem_margin_large"
        android:layout_gravity="bottom"
        android:background="@drawable/button_bg_white_rounded"
        android:text="@string/native_spend_buy_a_sticker"
        android:textAllCaps="false"
        android:textColor="@color/kinecosystem_bluePrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/native_earn_button"/>

    <Button
        android:id="@+id/native_earn_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="@dimen/kinecosystem_margin_large"
        android:layout_marginEnd="@dimen/kinecosystem_margin_large"
        android:layout_gravity="bottom"
        android:background="@drawable/button_bg_white_rounded"
        android:text="@string/native_earn"
        android:textAllCaps="false"
        android:textColor="@color/kinecosystem_bluePrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/pay_to_user_button"/>

    <Button
        android:id="@+id/pay_to_user_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="@dimen/kinecosystem_margin_large"
        android:layout_marginEnd="@dimen/kinecosystem_margin_large"
        android:layout_gravity="bottom"
        android:background="@drawable/button_bg_white_rounded"
        android:text="@string/pay_to_user"
        android:textAllCaps="false"
        android:textColor="@color/kinecosystem_bluePrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/order_confirmation_button"/>

    <Button
        android:id="@+id/order_confirmation_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="@dimen/kinecosystem_margin_large"
        android:layout_marginEnd="@dimen/kinecosystem_margin_large"
        android:layout_gravity="bottom"
        android:background="@drawable/button_bg_white_rounded"
        android:text="@string/get_order_confirmation"
        android:textAllCaps="false"
        android:textColor="@color/kinecosystem_bluePrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
